data/derived/comb/progs/unify/prog7138.ml.out
Characters 85-96:
  else returnList @ ( n mod 10)
                    ^^^^^^^^^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
